Bug 169015 - Impress crashes when printing notes if notes contain certain content
Summary: Impress crashes when printing notes if notes contain certain content
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.6.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Xisco Faulí
URL:
Whiteboard: target:26.2.0 target:25.8.3.2 target:...
Keywords: bibisected, bisected, regression
: 166300 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-23 07:41 UTC by Felix
Modified: 2025-12-05 07:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["Outliner::SetText(OutlinerParaObject%20const%20&)"]


Attachments
Minimal Sample to reproduce error (294.30 KB, application/vnd.oasis.opendocument.presentation)
2025-10-23 07:42 UTC, Felix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felix 2025-10-23 07:41:33 UTC
Description:
I prepared a presentation and copied some content into the notes section. Later, I wanted to print the slides with the notes. Impress crashed immediately. I narrowed the problem down to one slide that had no notes. However, there appears to be an empty object above the notes. I cannot recall how this object ended up on the notes page, but it causes a crash. 

Expected behaviour:
  Either: The object should not cause a crash.
  - or: Objects that cause a crash should not be allowed to be inserted.

I tested on 25.2.6 and 25.8.2

Steps to Reproduce:
1.Open file
2.strg+p
3.Select print notes


Actual Results:
4. LO Chrashes

Expected Results:
4. LO prints notes


Reproducible: Always


User Profile Reset: No

Additional Info:
File attached
Comment 1 Felix 2025-10-23 07:42:44 UTC
Created attachment 203493 [details]
Minimal Sample to reproduce error
Comment 2 Felix 2025-10-23 07:53:41 UTC
Also reproducible with safe mode
Comment 3 Xisco Faulí 2025-10-23 08:13:16 UTC
Regression introduced by:

commit 43e511e642a2ce7026b30ea5c212940ff3eb522e	[log]
author	Tibor Nagy <tibor.nagy.extern@allotropia.de>	Fri Nov 29 02:10:21 2024 +0100
committer	Nagy Tibor <tibor.nagy.extern@allotropia.de>	Wed Dec 04 10:17:24 2024 +0100
tree 015cf6cfd57477fd363315100e24a6cafc958d22
parent eae43ee9112e59b8aabc2abad04d5413230e17a4 [diff]

tdf#88226 sd: fix cutting off the overflow text on the notes print page

Bisected with: linux64-25.2
Comment 4 Commit Notification 2025-10-23 09:58:52 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a406c26e8b8d09b99c949192bc731ba6126cef0

tdf#169015: GetOutlinerParaObject might return nullptr

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Felix 2025-10-23 10:12:32 UTC
Wow. What a quick handling of the bug. Thank you so much!
Comment 6 Commit Notification 2025-10-23 18:22:14 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d8d4320a6420ea623f613203cc508a90e8d3c494

tdf#169015: GetOutlinerParaObject might return nullptr

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-10-24 13:14:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/58ce091fcfd9fbf99d2a34c22b92b293ee59132b

tdf#169015: GetOutlinerParaObject might return nullptr

It will be available in 25.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-10-24 13:23:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-7":

https://git.libreoffice.org/core/commit/03322cb8279b26a9c1ab9c660b1eb7ed9187a851

tdf#169015: GetOutlinerParaObject might return nullptr

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-11-03 16:06:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/7d271f90984038127550ae70ac0b0deaee5c1255

tdf#169015: GetOutlinerParaObject might return nullptr

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2025-12-05 07:31:25 UTC
*** Bug 166300 has been marked as a duplicate of this bug. ***