tdf#169015: GetOutlinerParaObject might return nullptr

Regression from
commit 43e511e642a2ce7026b30ea5c212940ff3eb522e
Author: Tibor Nagy <tibor.nagy.extern@allotropia.de>
Date:   Fri Nov 29 02:10:21 2024 +0100

    tdf#88226 sd: fix cutting off the overflow text on the notes print page

Change-Id: I4e25760afe4bd535d1accf8291f9cbb4457625ad
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192895
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 9a406c26e8b8d09b99c949192bc731ba6126cef0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192906
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>